# GEN_AI-cohort

./: .gitignore
Lecture-0-Intro-to-AI/Assignment-2/: tokenizer.py  tokzilla.py
Lecture-0-Intro-to-AI/Class work/: requirement.txt  tokenization.py
Lecture-1-HelloWorld and Master Prompting/Assignment/: hitesh-sir-bot.py  system_prompt.txt
Lecture-1-HelloWorld and Master Prompting/Classwork/: chat.py  gemini-auto.py  gemini.py  requirements.txt
Lecture-10-LangGraph-Checkpointing/assignment/: ingest.py  main.py  pyproject.toml  stt.py  tts.py
Lecture-10-LangGraph-Checkpointing/classwork/: docker-compose.db.yml  graph.py  main.py  pyproject.toml  requirements.txt  support.py
Lecture-11-VibeTalker-project/: pyproject.toml
Lecture-11-VibeTalker-project/app/: graph.py  main.py
Lecture-12-MCP/: main.py  pyproject.toml
Lecture-12-MCP/mcp-js/: index.js  mcp.json  package-lock.json  package.json
Lecture-13-capstone/: main.py  new.py  pyproject.toml  system_prompt.txt
Lecture-2-Agents-and-Fine-Tuning/Assigment/: requirements.txt  weather-ai-aget.py
Lecture-3-Fine-Tuning-and-discussion/: README.md
Lecture-4-Intro-to-RAG/Classwork/: main.py  requirements.txt
Lecture-5-Query-Translation-Patterns(Advance-RAG)/: README.md
Lecture-6-Query-Routing/: README.md
Lecture-7-Knowledge-graph/assignment/: docker-compose.db.yml  main.py  pyproject.toml
Lecture-7-Knowledge-graph/classwork/: main.py  pyproject.toml
Lecture-9-LangGraph(Orchestration)/classwork/: graph.py  pyproject.toml  requirements.txt
